<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Bridal</string>
    <string name="title_activity_reallogin" translatable="false">reallogin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up Here</string>
    <string name="fst_name">First name</string>
    <string name="scnd_name">Last name</string>
    <string name="ALRDRy">Already have account?</string>
    <string name="confpass">Confrirm password</string>
    <string name="crt">Create an account</string>
    <string name="lang">choose language</string>
    <string name="tm">Your have Registered successfully . Your user id is</string>
    <string name="snscksucces">your details are valid</string>
    <string name="logsucc">you have login successfully</string>
    <string name="frgno">Enter your username and email and we will send you  an email to reset your password</string>
    <string name="plsck">please click back again to exit</string>
    <string name="sub">Sumbit</string>
    <string name="emailsnt">The email was sent succesfully</string>
    <string name="errw">Error while registring the user</string>
    <string name="hmm">Home</string>
    <string name="lk">Liked</string>
    <string name="My_adds">My adds</string>
    <string name="My_account">My account</string>
    <string name="stt">Settings</string>

    <string name="action_settings">Settings</string>

    <string name="content_description">image</string>

    <string name="title_settings">Setting</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>

    <!--TODO Step 3: Add the string resources to the strings.xml file-->
    <!--START-->
    <string name="action_add_product">Add Product</string>


    <string name="plswt">Please Wait..</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signupher">Sign Up Here</string>
    <string name="login">Login</string>
    <string name="donot">Don’t have account?</string>
    <string name="signup">Sign Up</string>
    <string name="authface">Sign in with Facebook</string>
    <string name="authgoo">Sign in with Google</string>
    <string name="forget">Forget Password?</string>
    <string name="em">Email</string>
    <string name="pass">Password</string>
    <string name="reg">Register</string>
    <string name="err_msg_firstname">Please enter your First name</string>
    <string name="err_msg_lastname">Please enter your Last name</string>
    <string name="err_msg_erremail">Please enter your Email</string>
    <string name="err_msg_pass1">Please enter your password</string>
    <string name="err_msg_length_Password">The password is not less than 6 number</string>
    <string name="err_msg_confirmpass">Please enter confirm your password</string>
    <string name="err_msg_notmatched">Please confirm your password</string>
    <string name="title_activity_main">Bridal</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="allow">Allow Notifications ?</string>
    <string name="en">English</string>
    <string name="ar">Arabic</string>
    <string name="cat">category</string>
    <string name="PRDti">Product title</string>
    <string name="PRDtih"> Add Product title</string>
    <string name="prc">Price</string>
    <string name="prch">Add Price</string>
    <string name="dscrh">Add Product Description</string>
    <string name="dscr">Product Description</string>
    <string name="adim">Add images</string>
    <string name="advid">Add videos</string>
    <string name="adloc">Add location</string>
    <string name="optio">(optional)</string>
    <string name="sv">Save</string>
    <string name="title_my_adds">My Adds</string>
    <string name="title_my_message">My Message</string>


    <!-- Home List title -->
    <string name="beauty_center">Beauty Center</string>
    <string name="buffet_services">Buffet Services</string>
    <string name="car_rental">Car Rental</string>
    <string name="cosmetic_dentistry">Cosmetic Dentistry</string>
    <string name="domestic_flights">Domestic Flights</string>
    <string name="flowers">Flowers</string>
    <string name="gold_and_jewelry">Gold and Jewelry</string>
    <string name="health_and_beauty">Health and Beauty</string>
    <string name="honey_moon">Honey Moon</string>
    <string name="hotels">Hotels</string>
    <string name="watches_and_accessories">Watches and Accessories</string>
    <string name="wedding_group">Wedding Group</string>
    <string name="wedding_halls">Wedding Halls</string>
    <string name="wedding_suit">Wedding Suit</string>
    <string name="weeding_dresses">Weeding Dresses</string>

    <!-- Home List description-->
    <string name="beauty_center_description">You are the most beautiful without competition</string>
    <string name="buffet_services_description">Taste the joy</string>
    <string name="car_rental_description">The beginning of your path to a new life</string>
    <string name="cosmetic_dentistry_description">Smile radiant with happiness </string>
    <string name="domestic_flights_description">Move with all the details of calm</string>
    <string name="flowers_description">Decorate your occasion with the most beautiful flowers</string>
    <string name="gold_and_jewelry_description">Elegance and beauty in your hands</string>
    <string name="health_and_beauty_description">Relaxing for the beginning of a beautiful life</string>
    <string name="honey_moon_description">Draw the most beautiful and unforgettable memories</string>
    <string name="hotels_description">Enchanting nights in the finest places</string>
    <string name="watches_and_accessories_description">Sparkle with elegance</string>
    <string name="wedding_group_description">Angham Ali Hawak</string>
    <string name="wedding_halls_description">Life is nocturnal..choose the most beautiful place for her</string>
    <string name="wedding_suit_description">For Abhi, the look of the night of a lifetime</string>
    <string name="weeding_dresses_description">Be a princess on your wedding night</string>

    <!-- category array-->
    <string-array name="category">
        <item name="no_selected">Select Category</item>
        <item name="beauty_center">Beauty Center</item>
        <item name="buffet_services">Buffet Services</item>
        <item name="car_rental">Car Rental</item>
        <item name="cosmetic_dentistry">Cosmetic Dentistry</item>
        <item name="domestic_flights">Domestic Flights</item>
        <item name="flowers">Flowers</item>
        <item name="gold_and_jewelry">Gold and Jewelry</item>
        <item name="health_and_beauty">Health and Beauty</item>
        <item name="honey_moon">Honey Moon</item>
        <item name="hotels">Hotels</item>
        <item name="watches_and_accessories">Watches and Accessories</item>
        <item name="wedding_group">Wedding Group</item>
        <item name="wedding_halls">Wedding Halls</item>
        <item name="wedding_suit">Wedding Suit</item>
        <item name="weeding_dresses">Weeding Dresses</item>
    </string-array>

    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_forgetPassword">Forget Password</string>
    <string name="title_product">Product</string>
    <string name="title_add_product">Add Product</string>

    <string name="title_product_not_foun">Product not found</string>
    <string name="title_new_product">Add New Product</string>
    <string name="btn_upload_video">Upload</string>
    <string name="title_upload_video">Upload Video</string>
    <string name="title_select_image">Select Image</string>
    <string name="title_add_location">Add Location</string>

    <string name="err_validate_select_category">Please Select Category</string>
    <string name="err_validate_product_title">Please add title of product</string>
    <string name="err_validate_product_price">Please add price of product</string>
    <string name="err_validate_product_description">Please add description of product</string>


    <string name="title_complete_profile">Complete Your Profile</string>
    <string name="title_edit_profile">Edit Your Profile</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">Male</string>
    <string name="rb_lbl_female">Female</string>
    <string name="title_select_more_image">Select more image</string>
    <string name="title_setting_page">Setting</string>

    <string name="title_btn_change_language">Change</string>

    <string name="title_logout_dialog">Are you want logout?</string>
    <string name="title_description_logout_dialog">Click "yes" go logout.</string>
    <string name="title_dialog_yes">yes</string>
    <string name="title_dialog_no">no</string>
    <string name="title_no_add_product">you do not add any product</string>
    <string name="title_product_details">Details</string>


    <string name="title_delete">Are you sure delete this</string>
    <string name="title_message_for_delete">Click "yes" for delete it</string>
    <string name="title_add_to_favorite">Add to favorite</string>
    <string name="title_no_favorite">No favorite</string>
    <string name="title_message_not_found">No message</string>

    <!-- country array-->
    <string-array name="country">
        <item name="no_selected">Country</item>
        <item name="country_egypt">Egypt</item>
        <item name="country_sudan">Sudan</item>
        <item name="country_saudi">Saudi Arabia</item>
        <item name="country_tunisia">Tunisia</item>
        <item name="country_somalia ">Somalia</item>
        <item name="country_algeria">Algeria</item>
        <item name="country_morocco">Morocco</item>
        <item name="country_iraq">Iraq</item>
        <item name="country_syria">Syria</item>
        <item name="country_yemen">Yemen</item>
        <item name="country_libya">Libya</item>
        <item name="country_jordan">Jordan</item>
        <item name="country_emirates">Emirates</item>
        <item name="country_lebanon">Lebanon</item>
        <item name="country_mauritania">Mauritania</item>
        <item name="country_kuwait">Kuwait</item>
        <item name="country_oman">Oman</item>
        <item name="country_qatar">Qatar</item>
        <item name="country_djibouti">Djibouti</item>
    </string-array>


</resources>