<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/hmm"
        android:iconTintMode="src_atop"
        android:icon="@drawable/ic_vector_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/myAddsFragment"
        android:title="@string/My_adds"
        android:icon="@drawable/ic_vector_my_adds"
        app:showAsAction="always" />

    <item

        android:id="@+id/favoriteFragment"
        android:title="@string/lk"
        android:icon="@drawable/ic_vector_favorite"
        app:showAsAction="always"
        android:iconTintMode="multiply" />

    <item
        android:id="@+id/messageFragment"
        android:title="@string/title_my_message"
        android:icon="@drawable/ic_vector_message"
        app:showAsAction="always" />
</menu>