<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".ui.activits.reallogin">


    <Button
        android:id="@+id/button"
        android:layout_width="326dp"
        android:layout_height="39dp"
        android:backgroundTint="#1976D3"
        android:text="@string/authface"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.961">

    </Button>

    <Button
        android:id="@+id/logb"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/clicked"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="327dp"
        android:layout_height="38dp"
        android:layout_marginBottom="81dp"
        android:backgroundTint="@color/white"
        android:text="@string/authgoo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="86dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"

        android:backgroundTint="@color/clicked"
        android:text="@string/lang"
        android:textColor="@color/back"
        android:textSize="7sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"/>

    <EditText
        android:backgroundTint="@color/page"
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="284dp"
        android:layout_height="44dp"
        android:layout_marginBottom="35dp"
        android:drawableEnd="@drawable/emailo"
        android:ems="10"
        android:hint="@string/em"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="282dp"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/page"
        android:paddingEnd="12dp"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        android:drawableTint="@color/page"
        app:passwordToggleEnabled="true"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textEmailAddress"
        android:maxLines="20"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/logb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="399dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/signupher"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.929" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:text="@string/reg"
        android:textColor="#1976D3"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/logb" />

    <TextView
        android:id="@+id/frgtpas"
        android:layout_width="97dp"
        android:layout_height="14dp"
        android:text="@string/forget"
        android:textColor="#1976D3"
        android:textSize="9sp"
        app:layout_constraintBottom_toTopOf="@+id/logb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="86dp"
        android:text="@string/donot"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/logb"
        app:layout_constraintTop_toBottomOf="@+id/logb"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="frgtpas"
        tools:layout_editor_absoluteY="249dp"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="editTextTextEmailAddress"
        tools:layout_editor_absoluteY="113dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="textView4"
        tools:layout_editor_absoluteY="327dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="button3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="330dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4278607" />


</androidx.constraintlayout.widget.ConstraintLayout>