<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splashFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.bridal.ui.homefragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_settingsAccountFragment"
            app:destination="@id/settingsAccountFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/homeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_productFragment"
            app:destination="@id/productFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.bridal.ui.favoritefragment.FavoriteFragment"
        android:label="@string/lk"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/myAddsFragment"
        android:name="com.example.bridal.ui.myaddsfragment.MyAddsFragment"
        android:label="@string/title_my_adds"
        tools:layout="@layout/fragment_my_adds" >
        <action
            android:id="@+id/action_myAddsFragment_to_addProductFragment"
            app:destination="@id/addProductFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/myAddsFragment" />
        <action
            android:id="@+id/action_myAddsFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/myAddsFragment" />
    </fragment>

    <fragment
        android:id="@+id/messageFragment"
        android:name="com.example.bridal.ui.messagefragment.MessageFragment"
        android:label="@string/title_my_message"
        tools:layout="@layout/fragment_message" >
        <action
            android:id="@+id/action_messageFragment_to_chatFragment"
            app:destination="@id/chatFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/messageFragment" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.bridal.ui.splashfragment.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_viewPagerFragment"
            app:destination="@id/viewPagerFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/mobile_navigation" />
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/mobile_navigation" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.bridal.ui.loginfragment.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_forgetPasswordFragment"
            app:destination="@id/forgetPasswordFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/loginFragment" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/loginFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/mobile_navigation" />
        <action
            android:id="@+id/action_loginFragment_to_completeProfileFragment"
            app:destination="@id/completeProfileFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.bridal.ui.registerfragment.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/mobile_navigation" />
    </fragment>
    <fragment
        android:id="@+id/forgetPasswordFragment"
        android:name="com.example.bridal.ui.forgetpasswordfragment.ForgetPasswordFragment"
        android:label="@string/title_forgetPassword"
        tools:layout="@layout/fragment_forget_password" >
        <action
            android:id="@+id/action_forgetPasswordFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/mobile_navigation" />
    </fragment>
    <fragment
        android:id="@+id/settingsAccountFragment"
        android:name="com.example.bridal.ui.settingsaccountfragment.SettingsAccountFragment"
        android:label="@string/title_setting_page"
        tools:layout="@layout/fragment_settings_account" >
        <action
            android:id="@+id/action_settingsAccountFragment_to_completeProfileFragment"
            app:destination="@id/completeProfileFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/settingsAccountFragment" />
        <action
            android:id="@+id/action_settingsAccountFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/mobile_navigation" />
    </fragment>
    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.example.bridal.ui.addproductfragment.AddProductFragment"
        android:label="@string/title_add_product"
        tools:layout="@layout/fragment_add_product" />
    <fragment
        android:id="@+id/productFragment"
        android:name="com.example.bridal.ui.productfragment.ProductFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_productFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/productFragment" />
    </fragment>
    <fragment
        android:id="@+id/completeProfileFragment"
        android:name="com.example.bridal.ui.completeprofilefragment.CompleteProfileFragment"
        android:label="@string/title_complete_profile"
        tools:layout="@layout/fragment_complete_profile" >
        <action
            android:id="@+id/action_completeProfileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/mobile_navigation" />
    </fragment>
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.example.bridal.ui.productdetails.ProductDetailsFragment"
        android:label="@string/title_product_details"
        tools:layout="@layout/fragment_product_details" >
        <action
            android:id="@+id/action_productDetailsFragment_to_viewFullImageFragment"
            app:destination="@id/viewFullImageFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/productDetailsFragment" />
        <action
            android:id="@+id/action_productDetailsFragment_to_chatFragment"
            app:destination="@id/chatFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/productDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/viewFullImageFragment"
        android:name="com.example.bridal.ui.viewFullImageFragment.ViewFullImageFragment"
        tools:layout="@layout/fragment_view_full_image" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.bridal.ui.chatfragment.ChatFragment"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/viewPagerFragment"
        android:name="com.example.bridal.ui.viewpagerfragment.ViewPagerFragment"
        android:label="fragment_view_pager"
        tools:layout="@layout/fragment_view_pager" >
        <action
            android:id="@+id/action_viewPagerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popUpTo="@id/mobile_navigation" />
    </fragment>
    <fragment
        android:id="@+id/firstScreenFragment"
        android:name="com.example.bridal.ui.firstscreenfragment.FirstScreenFragment"
        android:label="fragment_first_screen"
        tools:layout="@layout/fragment_first_screen" />
    <fragment
        android:id="@+id/secondScreenFragment"
        android:name="com.example.bridal.SeconScreenFragment"
        android:label="fragment_second_screen"
        tools:layout="@layout/fragment_second_screen" />
    <fragment
        android:id="@+id/thirdScreenFragment"
        android:name="com.example.bridal.ui.thirdscreenfragment.ThirdScreenFragment"
        android:label="fragment_third_screen"
        tools:layout="@layout/fragment_third_screen" />

</navigation>