<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alax"
    tools:context=".ui.activits.frgtbassword"
    >


    <Button
        android:id="@+id/sub"
        android:layout_width="210dp"
        android:layout_height="46dp"
        android:layout_marginBottom="108dp"
        android:text="@string/sub"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="212dp"
        android:layout_height="42dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="108dp"
        android:text="@string/forget"
        android:textAlignment="center"
        android:textColor="@color/back"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.621" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="319dp"
        android:layout_height="77dp"
        android:layout_marginTop="320dp"
        android:layout_marginBottom="17dp"
        android:text="@string/frgno"
        android:textColor="@color/clicked"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="textView9"
        tools:layout_editor_absoluteY="224dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="textView10" />

    <EditText
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="339dp"
        android:layout_height="44dp"
        android:layout_marginBottom="189dp"
        android:background="@drawable/back"
        android:hint="@string/em"
        android:textColorHint="@color/grey"
        android:paddingStart="5dp"
        app:endIconDrawable="@drawable/emailo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"/>



</androidx.constraintlayout.widget.ConstraintLayout>